WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127147
REGRESSION(
r162145
): media/video-controls-visible-audio-only.html fails
https://bugs.webkit.org/show_bug.cgi?id=127147
Summary
REGRESSION(r162145): media/video-controls-visible-audio-only.html fails
Alexey Proskuryakov
Reported
2014-01-16 14:53:10 PST
media/video-controls-visible-audio-only.html fails on all Mac bots. Jer asked to keep this revision in the tree for a while. Not quite sure what the rationale for keeping it is though, would it be hard to investigate offline?
Attachments
Patch
(5.28 KB, patch)
2014-01-16 16:02 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(6.47 KB, patch)
2014-01-16 16:14 PST
,
Jer Noble
eric.carlson
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(6.47 KB, patch)
2014-01-16 16:41 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.72 KB, patch)
2014-01-16 17:06 PST
,
Jer Noble
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-01-16 15:00:14 PST
Added the test to TestExpectations in <
http://trac.webkit.org/r162157
>. Since this change introduced a strange and (yet) inexplicable dependency between tests, and media test failures are by far the #1 contributor to testing instability, my plan is to roll out
r162145
later today if fixing it for good proves difficult.
Jer Noble
Comment 2
2014-01-16 16:02:44 PST
Created
attachment 221422
[details]
Patch
Jer Noble
Comment 3
2014-01-16 16:14:19 PST
Created
attachment 221424
[details]
Patch Now with a re-enabled test.
Alexey Proskuryakov
Comment 4
2014-01-16 16:23:39 PST
Comment on
attachment 221424
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=221424&action=review
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.h:45 > + virtual void resetRestrictions() OVERRIDE;
This won't build, as we don't have OVERRIDE any more. Please use lower case now.
Jer Noble
Comment 5
2014-01-16 16:41:18 PST
Created
attachment 221425
[details]
Patch for landing
Jer Noble
Comment 6
2014-01-16 17:06:36 PST
Created
attachment 221428
[details]
Patch for landing Rebaselined
WebKit Commit Bot
Comment 7
2014-01-16 18:02:21 PST
Comment on
attachment 221428
[details]
Patch for landing Rejecting
attachment 221428
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 221428, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/5734015281659904
Jer Noble
Comment 8
2014-01-16 18:08:46 PST
Committed
r162178
: <
http://trac.webkit.org/changeset/162178
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug