REGRESSION(r162145): media/video-controls-visible-audio-only.html fails https://bugs.webkit.org/show_bug.cgi?id=127147

Source/WebCore:

Reviewed by Eric Carlson.

Reset the MediaSessionManager's restrictions to their default values before
each run.

Add a new virtual method "resetRestrictions()" so that each port-specific
MediaSessionManager can reset the restrictions to their default values.
Call this from Internals::resetToConsistentState() so that tests which change
the restrictions don't affect later tests.

* platform/audio/MediaSessionManager.cpp:
(WebCore::MediaSessionManager::MediaSessionManager):
(WebCore::MediaSessionManager::resetRestrictions):
* platform/audio/MediaSessionManager.h:
(WebCore::MediaSessionManager::~MediaSessionManager):
* platform/audio/ios/MediaSessionManagerIOS.h:
* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::resetRestrictions):
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):

LayoutTests:

Re-enable media/video-controls-visible-audio-only.html.

Reviewed by Eric Carlson.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/145145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162178 268f45cc-cd09-0410-ab3c-d52691b4dbfc